--- a/PokemonGo.RocketAPI.Console/App.config
+++ b/PokemonGo.RocketAPI.Console/App.config
@@ -2,6 +2,8 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            
+            <section name="PokemonGo.RocketAPI.GUI.UserSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="PokemonGo.RocketAPI.Console.UserSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="PokemonGo.RocketAPI.Console.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
@@ -18,7 +20,8 @@
     </assemblyBinding>
   </runtime>
   <userSettings>
-    <PokemonGo.RocketAPI.Console.UserSettings>
+    
+    <PokemonGo.RocketAPI.GUI.UserSettings>
       <setting name="AuthType" serializeAs="String">
         <value>Ptc</value>
       </setting>
@@ -32,11 +35,67 @@
         <value />
       </setting>
       <setting name="DefaultLatitude" serializeAs="String">
-        <value>0</value>
+        <value>55.754853</value>
       </setting>
       <setting name="DefaultLongitude" serializeAs="String">
-        <value>0</value>
+        <value>37.633987</value>
       </setting>
+      <setting name="UseProxy" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="ProxyUri" serializeAs="String">
+        <value>proxy-proxy.com:1234</value>
+      </setting>
+      <setting name="ProxyLogin" serializeAs="String">
+        <value>proxyLogin</value>
+      </setting>
+      <setting name="ProxyPass" serializeAs="String">
+        <value>proxyPass</value>
+      </setting>
+      <setting name="AutoEvolve" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="AutoTransfer" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="TransferOnlyWeak" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </PokemonGo.RocketAPI.GUI.UserSettings>
+    <PokemonGo.RocketAPI.Console.UserSettings>
+        <setting name="AuthType" serializeAs="String">
+            <value>Ptc</value>
+        </setting>
+        <setting name="PtcUsername" serializeAs="String">
+            <value>login</value>
+        </setting>
+        <setting name="PtcPassword" serializeAs="String">
+            <value>pass</value>
+        </setting>
+        <setting name="GoogleRefreshToken" serializeAs="String">
+            <value />
+        </setting>
+        <setting name="DefaultLatitude" serializeAs="String">
+            <value>55.754853</value>
+        </setting>
+        <setting name="DefaultLongitude" serializeAs="String">
+            <value>37.633987</value>
+        </setting>
+        <setting name="UseProxy" serializeAs="String">
+            <value>True</value>
+        </setting>
+        <setting name="ProxyUri" serializeAs="String">
+            <value>vm-dc-proxy.rosenergo.com:3128</value>
+        </setting>
+        <setting name="ProxyLogin" serializeAs="String">
+            <value>m.podolskiy</value>
+        </setting>
+        <setting name="ProxyPass" serializeAs="String">
+            <value>Vgard121</value>
+        </setting>
+        <setting name="AutoEvolve" serializeAs="String">
+            <value>False</value>
+        </setting>
     </PokemonGo.RocketAPI.Console.UserSettings>
   </userSettings>
 </configuration>
