--- a/PokemonGo.RocketAPI.GUI/App.config
+++ b/PokemonGo.RocketAPI.GUI/App.config
@@ -22,45 +22,48 @@
   <userSettings>
     
     <PokemonGo.RocketAPI.GUI.UserSettings>
-      <setting name="AuthType" serializeAs="String">
-        <value>Ptc</value>
-      </setting>
-      <setting name="PtcUsername" serializeAs="String">
-        <value>login</value>
-      </setting>
-      <setting name="PtcPassword" serializeAs="String">
-        <value>pass</value>
-      </setting>
-      <setting name="GoogleRefreshToken" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="DefaultLatitude" serializeAs="String">
-        <value>55.754853</value>
-      </setting>
-      <setting name="DefaultLongitude" serializeAs="String">
-        <value>37.633987</value>
-      </setting>
-      <setting name="UseProxy" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="ProxyUri" serializeAs="String">
-        <value>proxy-proxy.com:1234</value>
-      </setting>
-      <setting name="ProxyLogin" serializeAs="String">
-        <value>proxyLogin</value>
-      </setting>
-      <setting name="ProxyPass" serializeAs="String">
-        <value>proxyPass</value>
-      </setting>
-      <setting name="AutoEvolve" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="AutoTransfer" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="TransferOnlyWeak" serializeAs="String">
-        <value>True</value>
-      </setting>
+        <setting name="AuthType" serializeAs="String">
+            <value>Ptc</value>
+        </setting>
+        <setting name="PtcUsername" serializeAs="String">
+            <value>login</value>
+        </setting>
+        <setting name="PtcPassword" serializeAs="String">
+            <value>pass</value>
+        </setting>
+        <setting name="GoogleRefreshToken" serializeAs="String">
+            <value />
+        </setting>
+        <setting name="DefaultLatitude" serializeAs="String">
+            <value>55.754853</value>
+        </setting>
+        <setting name="DefaultLongitude" serializeAs="String">
+            <value>37.633987</value>
+        </setting>
+        <setting name="UseProxy" serializeAs="String">
+            <value>False</value>
+        </setting>
+        <setting name="ProxyUri" serializeAs="String">
+            <value>proxy-proxy.com:1234</value>
+        </setting>
+        <setting name="ProxyLogin" serializeAs="String">
+            <value>proxyLogin</value>
+        </setting>
+        <setting name="ProxyPass" serializeAs="String">
+            <value>proxyPass</value>
+        </setting>
+        <setting name="AutoEvolve" serializeAs="String">
+            <value>False</value>
+        </setting>
+        <setting name="AutoTransfer" serializeAs="String">
+            <value>True</value>
+        </setting>
+        <setting name="TransferOnlyWeak" serializeAs="String">
+            <value>True</value>
+        </setting>
+        <setting name="MoveSpeedFactor" serializeAs="String">
+            <value>1</value>
+        </setting>
     </PokemonGo.RocketAPI.GUI.UserSettings>
     <PokemonGo.RocketAPI.Console.UserSettings>
         <setting name="AuthType" serializeAs="String">
