--- a/PokemonGo.RocketAPI.GUI/UserSettings.settings
+++ b/PokemonGo.RocketAPI.GUI/UserSettings.settings
@@ -41,5 +41,8 @@
     <Setting Name="TransferOnlyWeak" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="MoveSpeedFactor" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
